[tool.poetry]
name = "hello-world"
version = "0.1.0"
description = "first hello world of python language"
authors = ["sangbae Kang <typeon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.9b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
